fix: added gap between outage cards

--- a/src/app/components/organisms/OutageTabs/OutageTabs.styles.scss
+++ b/src/app/components/organisms/OutageTabs/OutageTabs.styles.scss
@@ -26,5 +26,6 @@
   &__footer {
     display: flex;
     justify-content: space-between;
+    gap: 8px;
   }
 }
